debug collapsing white-space issue in matrix.js

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,7 +132,7 @@ ul {
 #d {
     /* matrix (d-o-m) */
     text-align: left;
-    letter-spacing: 7px;
+    /* letter-spacing: 7px; */
     white-space: pre-wrap;
     word-break: break-all;
 }
